@startuml

' Set default style for all classes
skinparam classAttributeIconSize 16
skinparam classFontSize 14
skinparam classArrowColor #0000ff
skinparam classBackgroundColor #f9f9f9
skinparam classBorderColor #333333

' Define KeyPair class
class KeyPair {
    +String public
    +String private
    +KeyPair(public: String, private: String)
    +static generate(): KeyPair
}

' Define Network class (can be expanded later)
class Network {
    ' This class is empty for now, but can be extended in the future.
}

' Define Wallet class
class Wallet {
    +KeyPair keyPair
    +Wallet(keyPair: KeyPair)
}

' Define TransactionSigner class
class TransactionSigner {
    +String signTransaction(message: String, privateKey: String): String
}

' Define Transaction class
class Transaction {
    +Wallet sender
    +Wallet receiver
    +String signature
    +String signDate
    +double amount
    +String txId
    +Transaction(sender: Wallet, receiver: Wallet, amount: double, signature: String, signDate: String)
    +void showTransaction()
    +_generateTxId(): String
}

' Define WalletManager class
class WalletManager {
    +List<Wallet> wallets
    +void createWallet()
    +void importPrivateKey(privateKey: String)
    +void sendTransaction(sender: Wallet, receiver: Wallet, amount: double)
}

' Relationships between classes
WalletManager "1" --> "*" Wallet : Manages
Wallet "1" --> "1" KeyPair : Contains
WalletManager "1" --> "*" Transaction : Creates
TransactionSigner "1" --> "*" Transaction : Signs
Transaction "1" --> "1" Wallet : Involves

@enduml
